--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -42,180 +42,180 @@
     <ul class="cursos">
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/htmlLogo.jpg">
                 <div class="con-text">
                     <h2>HTML</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Html.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/css_blog.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Css</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Css.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/Javascript.jpg">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Javascript</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Javascript.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/nodejs.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>NodeJs</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar NodeJs.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/mysql.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Mysql</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar MySql.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/postgresql.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>PostgreSql</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar PostgreSql.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/react.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>React</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar React.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
                 <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/ruby.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Ruby</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Ruby.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/postman.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Postman</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para aprender a usar Postman.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/vue.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Vue.Js</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Vue.Js .
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/php.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Php</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Php.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/python.jpg">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Python</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Python.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/boostrap.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Boostrap</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para aprender a usar Boostrap.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/wordpress.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Wordpress</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para dominar Wordpress.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
         </li>
         <li class="curso">
             <div class="card">
-                <img class="curso-poster" src="Imagenes/cursoPrueba.jpg" alt="Spiderman">
+                <img class="curso-poster" src="Imagenes/frontend-backend.png">
                 <div class="con-text">
-                    <h2>HTML</h2>
+                    <h2>Desarrollo Web</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                        <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para introducirte y dominar el mundo del desarrolo web.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </p>
                 </div>
             </div>
