--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -61,8 +61,8 @@
                     <div class="con-text">
                         <h2>Html</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
+                        En este curso, aprenderas los conocimientos necesarios para aprender Html.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                         </p>
                     </div>
                 </div>
@@ -73,9 +73,8 @@
                     <div class="con-text">
                         <h2>Css</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
-                        </p>
+                            En este curso, aprenderas los conocimientos necesarios para aprender Css.
+                        <button><a href="/registro/curso">Ingresar</a></button>
                     </div>
                 </div>
             </li>            
@@ -84,9 +83,8 @@
                     <img class="curso-poster" src="Imagenes/Javascript.jpg" alt="Spiderman">
                     <div class="con-text">
                         <h2>Javascript</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
+                        <p>En este curso, aprenderas los conocimientos necesarios para aprender Javascript.
+                            <button><a href="/registro/curso">Ingresar</a></button>
                         </p>
                     </div>
                 </div>
@@ -96,9 +94,8 @@
                     <img class="curso-poster" src="Imagenes/nodejs.png" alt="Spiderman">
                     <div class="con-text">
                         <h2>NodeJs</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
+                        <p>En este curso, aprenderas los conocimientos necesarios para aprender NodeJs.
+                            <button><a href="/registro/curso">Ingresar</a></button>
                         </p>
                     </div>
                 </div>
