--- a/views/inicioGuest.ejs
+++ b/views/inicioGuest.ejs
@@ -57,48 +57,48 @@
         <ul class="cursos">
             <li class="curso">
                 <div class="card">
-                    <img class="curso-poster" src="Imagenes/htmlLogo.jpg" alt="Spiderman">
+                    <img class="curso-poster" src="Imagenes/htmlLogo.jpg">
                     <div class="con-text">
                         <h2>Html</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
+                            En este curso, aprenderas los conocimientos necesarios para dominar Html.
+                            <button><a href="/errorAccess">Ingresar</a></button>
                         </p>
                     </div>
                 </div>
             </li>
             <li class="curso">
                 <div class="card">
-                    <img class="curso-poster" src="Imagenes/css_blog.png" alt="Spiderman">
+                    <img class="curso-poster" src="Imagenes/css_blog.png">
                     <div class="con-text">
                         <h2>Css</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
+                            En este curso, aprenderas los conocimientos necesarios para dominar Css.
+                            <button><a href="/errorAccess">Ingresar</a></button>
                         </p>
                     </div>
                 </div>
             </li>            
             <li class="curso">
                 <div class="card">
-                    <img class="curso-poster" src="Imagenes/Javascript.jpg" alt="Spiderman">
+                    <img class="curso-poster" src="Imagenes/Javascript.jpg">
                     <div class="con-text">
                         <h2>Javascript</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
+                            En este curso, aprenderas los conocimientos necesarios para dominar Javascript.
+                            <button><a href="/errorAccess">Ingresar</a></button>
                         </p>
                     </div>
                 </div>
             </li>
             <li class="curso">
                 <div class="card">
-                    <img class="curso-poster" src="Imagenes/nodejs.png" alt="Spiderman">
+                    <img class="curso-poster" src="Imagenes/nodejs.png">
                     <div class="con-text">
                         <h2>NodeJs</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere aliquam tempore iste dignissimos possimus animi explicabo debitis optio dolorum!
-                            <button>Leer mas...</button>
+                            En este curso, aprenderas los conocimientos necesarios para dominar NodeJs.
+                            <button><a href="/errorAccess">Ingresar</a></button>
                         </p>
                     </div>
                 </div>
