--- a/views/error.ejs
+++ b/views/error.ejs
@@ -13,10 +13,9 @@
         </label>
 
         <ul>
-            <li class="element-nav"><a href="/inicio">Inicio</a></li>
-            <li class="element-nav"><a href="/cursos">Cursos</a></li>
-            <li class="element-nav"><a href="/contacto">Contacto</a></li>
-            <li class="element-nav" id="myaccount"><a href="/micuenta">Mi Cuenta</a></li>
+            <li class="element-nav"><a href="/errorAccess">Inicio</a></li>
+            <li class="element-nav"><a href="/errorAccess">Cursos</a></li>
+            <li class="element-nav"><a href="/errorAccess">Contacto</a></li>
             <li class="element-nav" id="iniSesion"><a href="/login">Iniciar Sesión</a></li>
         </ul>
         
