--- a/views/adminMsj.ejs
+++ b/views/adminMsj.ejs
@@ -2,7 +2,7 @@
 <body>
     <header class="header">
         <div id="logo">
-            <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+            <a><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
         </div>
         
         <nav class="nav-menu">
