--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -2,7 +2,7 @@
 <body>
 <header class="header">
         <div id="logo">
-            <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+            <a><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
         </div>
         <nav class="nav-menu">
 
@@ -14,6 +14,7 @@
             <ul>
                 <li class="element-nav"><a href="/inicio">Inicio</a></li>
                 <li class="element-nav"><a href="/cursos">Cursos</a></li>
+                <li class="element-nav"><a href="/peliculas">Peliculas</a></li>
                 <li class="element-nav"><a href="/contacto">Contacto</a></li>
                 <li class="element-nav" id="myaccount"><a href="/micuenta">Mi Cuenta</a></li>
             </ul>
