--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -3,7 +3,7 @@
     <!-- Menu de Navegacion -->
 <header class="header">
         <div id="logo">
-            <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+            <a><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
         </div>
         <nav class="nav-menu">
 
@@ -15,6 +15,7 @@
             <ul>
                 <li class="element-nav"><a href="/inicio">Inicio</a></li>
                 <li class="element-nav"><a href="/cursos">Cursos</a></li>
+                <li class="element-nav"><a href="/peliculas">Peliculas</a></li>
                 <li class="element-nav"><a href="/contacto">Contacto</a></li>
                 <li class="element-nav" id="myaccount"><a href="/micuenta">Mi Cuenta</a></li>
             </ul>
@@ -25,17 +26,6 @@
 <div id="contentSearch" class="search">
     <div class="contentSearch">
         <input type="text" placeholder="Buscar" id="buscador">
-    </div>
-    <div id="box-search">
-        <li><a href="#">Html</a></li>
-        <li><a href="#">Css</a></li>
-        <li><a href="#">Javascript</a></li>
-        <li><a href="#">Bootrap</a></li>
-        <li><a href="#">NodeJs</a></li>
-        <li><a href="#">MySql</a></li>
-        <li><a href="#">Wordpress</a></li>
-        <li><a href="#">Boostrap</a></li>
-        
     </div>
 </div>
 <main>
