--- a/views/head.ejs
+++ b/views/head.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="Css/registro.css">
     <link rel="stylesheet" href="Css/footer.css">
     <link rel="stylesheet" href="Css/error.css">
+    <link rel="stylesheet" href="Css/api.css">
     <link rel="stylesheet" href="Css/tablasAdmin.css">
     
 
