--- a/views/inicioGuest.ejs
+++ b/views/inicioGuest.ejs
@@ -3,7 +3,7 @@
     <!-- Menu de Navegacion -->
 <header class="header">
     <div id="logo">
-        <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+        <a ><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
     </div>
     
     <nav class="nav-menu">
@@ -25,7 +25,7 @@
         <div class="containerPortada">
             <h2 class="tituloPortada">Empieza el camino a tu futuro</h2>
             <p class="contentPortada">Estudia y certificate con nuestra variedad de cursos que puedes ver cuando quieras y donde quieras tan solo pagando nuestra membresía.</p>
-            <button class="btnPortada">Comienza ahora</button>
+            <button class="btnPortada"><a href="/registro">Comienza Ahora</a></button>
         </div>
     </div>    
     <!-- Tablas de información -->
