--- a/views/miCuenta.ejs
+++ b/views/miCuenta.ejs
@@ -13,6 +13,7 @@
             <ul>
                 <li class="element-nav"><a href="/inicio">Inicio</a></li>
                 <li class="element-nav"><a href="/cursos">Cursos</a></li>
+                <li class="element-nav"><a href="/peliculas">Peliculas</a></li>
                 <li class="element-nav"><a href="/contacto">Contacto</a></li>
                 <li class="element-nav" id="myaccount"><a href="/micuenta">Mi Cuenta</a></li>
             </ul>        
@@ -23,7 +24,7 @@
             <div class="contentCuenta">
 
 
-                <h1 id="nombreUser">Bienvenido</h1>                
+                <h1 id="nombreUser">Bienvenido Usuario</h1>                
                 <button id="btnEditarDatos1" onclick="mostrarForm()" class="btnPerfil">Editar Perfil</button>
                 <button id="btnEditarDatos2" onclick="ocultarForm()" class="btnPerfil">Editar Perfil</button>
             </div>
