--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -3,7 +3,7 @@
     <!-- Menu de Navegacion -->
     <header class="header">
       <div id="logo">
-          <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+          <a><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
       </div>
       <nav class="nav-menu">
 
@@ -13,9 +13,9 @@
           </label>
 
           <ul>
-              <li class="element-nav"><a href="/inicio">Inicio</a></li>
-              <li class="element-nav"><a href="/cursos">Cursos</a></li>
-              <li class="element-nav"><a href="/contacto">Contacto</a></li>
+              <li class="element-nav"><a href="/">Inicio</a></li>
+              <li class="element-nav"><a href="/errorAccess">Cursos</a></li>
+              <li class="element-nav"><a href="/errorAccess">Contacto</a></li>
               <li class="element-nav" id="iniSesion"><a href="/login">Iniciar Sesión</a></li>
           </ul>
           
