--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
         <!-- Menu de Navegacion -->
 <header class="header">
     <div id="logo">
-        <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+        <a><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
     </div>
     <nav class="nav-menu">
 
