--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -3,7 +3,7 @@
     <!-- Menu de Navegacion -->
 <header class="header">
     <div id="logo">
-        <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+        <a><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
     </div>
     
     <nav class="nav-menu">
@@ -14,6 +14,7 @@
         <ul>
             <li class="element-nav"><a href="/inicio">Inicio</a></li>
             <li class="element-nav"><a href="/cursos">Cursos</a></li>
+            <li class="element-nav"><a href="/peliculas">Peliculas</a></li>
             <li class="element-nav"><a href="/contacto">Contacto</a></li>
             <li class="element-nav" id="myaccount"><a href="/micuenta">Mi Cuenta</a></li>
         </ul>        
@@ -25,7 +26,7 @@
         <div class="containerPortada">
             <h2 class="tituloPortada">Empieza el camino a tu futuro</h2>
             <p class="contentPortada">Estudia y certificate con nuestra variedad de cursos que puedes ver cuando quieras y donde quieras tan solo pagando nuestra membresía.</p>
-            <button class="btnPortada">Comienza ahora</button>
+            <button class="btnPortada"><a href="/cursos">Comienza Ahora</a></button>
         </div>
     </div>    
     <!-- Tablas de información -->
