--- a/views/regCursos.ejs
+++ b/views/regCursos.ejs
@@ -511,7 +511,7 @@ a.google span{
 <!-- Menu de Navegacion -->
 <header class="header">
       <div id="logo">
-          <a href="/inicio"><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
+          <a><img src="Imagenes/undraw_programming_re_kg9v.svg"></a>
       </div>
       <nav class="nav-menu">
 
